--- a/notebooks/game_vKarla.ipynb
+++ b/notebooks/game_vKarla.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -309,45 +309,78 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def check_winners(summary_stat_label, sigmas):\n",
+        "from joblib import Parallel, delayed\n",
+        "from statannot import add_stat_annotation\n",
+        "import seaborn as sns\n",
+        "from collections import Counter\n",
+        "\n",
+        "def check_winners(sorted_players, sigmas, resection, group_size):\n",
         "    \"\"\"\n",
-        "    Check a summary_stat_labelegy's performance based on cross-validation scores and resection overlap.\n",
+        "    Check winners' performance based on cross-validation scores and resection overlap.\n",
         "\n",
         "    Parameters:\n",
-        "    - summary_stat_label (str): summary_stat type (mm/mx/av/rd/coefvar).\n",
+        "    - sorted_players (dict): Dictionary containing sorted players' cross-validation scores.\n",
         "    - sigmas (float): Number of standard deviations for defining the threshold.\n",
+        "    - nodes (list): List of node labels.\n",
+        "    - resection (list): List of nodes in the resection area.\n",
+        "    - group_size (float): Player or random group node number.\n",
         "\n",
         "    Returns:\n",
-        "    - Tuple: (summary_stat_label, number of groups above threshold, winner-loser ratio).\n",
+        "    - Tuple: (number of winners above threshold, winner-loser ratio, median resection overlap, mean resection overlap).\n",
         "    \"\"\"\n",
         "\n",
-        "    # Load sorted players' cross-validation scores\n",
-        "    sorted_players = load(open(path_game_scores + f\"scores_{cm}_{summary_stat_label}_{n_cards}cards_{rounds}rounds_{turns}turns_{woi}_sub{sub}.p\", \"rb\"))\n",
-        "\n",
         "    # Calculate group scores and resection matches\n",
-        "    group_scores = {tuple(g): sum([sum(sorted_players[player]) for player in sorted_players if nodes[player[0]] in g and nodes[player[1]] in g]) for g in rd_groups}\n",
-        "    resection_match = {players: [n for n in players if n in resection] for players in group_scores}\n",
+        "    group_scores = {player:sum(sorted_players[player]) for player in sorted_players}\n",
+        "    resection_match = {player: [n for n in player if n in resection] for player in group_scores}\n",
+        "\n",
+        "    # # Plot the wins distribution\n",
+        "    # FONT_SIZE = 13\n",
+        "    # count = dict(Counter(group_scores.values()))\n",
+        "    # count_sorted = {k: v for k, v in sorted(count.items(), key=lambda item: item[0])}\n",
+        "    # counted = {\"N_nodes\": list(count_sorted.values()), \"Scores\": list(count_sorted.keys())}\n",
+        "    # fig, ax = plt.subplots(1, 2, gridspec_kw={'width_ratios': [4, 2]}, figsize=(6, 3))\n",
+        "    # fig.tight_layout()\n",
+        "    # sns.barplot(data=counted, x=\"Scores\", y=\"N_nodes\", ax=ax[0], color=\"grey\")\n",
+        "    # ax[0].set_xlabel(\"Game score (Number of wins)\", fontsize=FONT_SIZE)\n",
+        "    # ax[0].set_xticklabels(counted[\"Scores\"], rotation=90)\n",
+        "    # ax[0].set_ylabel(\"Number of players\", fontsize=FONT_SIZE)\n",
+        "    # sns.boxplot(x=list(group_scores.values()), ax=ax[1], color=\"grey\")\n",
+        "    # plt.show()\n",
         "\n",
         "    # Calculate statistical measures\n",
         "    median = np.median(list(group_scores.values()))\n",
         "    mean = np.average(list(group_scores.values()))\n",
         "    std = np.std(list(group_scores.values()))\n",
         "\n",
-        "    # Define threshold based on median and standard deviations\n",
-        "    thresh = median + (std * sigmas)\n",
-        "\n",
-        "    # Identify groups scoring above threshold\n",
+        "    # Define threshold based on mean and standard deviations\n",
+        "    thresh = mean + (std * sigmas)\n",
         "    winners_above_thresh = [players for players in group_scores if group_scores[players] >= thresh]\n",
         "    N_winners_above_thresh = len(winners_above_thresh)\n",
+        "    print(f\"Number of winners above threshold ({thresh}) = {N_winners_above_thresh}\")\n",
         "\n",
-        "    # Calculate resection overlap for winners and losers\n",
-        "    resection_overlap_winners = [len(resection_match[players]) for players in winners_above_thresh]\n",
-        "    resection_overlap_losers = [len(resection_match[players]) for players in resection_match if players not in winners_above_thresh]\n",
+        "    if N_winners_above_thresh > 0:\n",
+        "        # Calculate resection overlap for winners and losers\n",
+        "        resection_overlap_winners = [len(resection_match[players]) / group_size for players in winners_above_thresh]\n",
+        "        resection_overlap_losers = [len(resection_match[players]) / group_size for players in resection_match if\n",
+        "                                    players not in winners_above_thresh]\n",
         "\n",
-        "    # Calculate the winner-loser ratio\n",
-        "    winner_loser_ratio = np.mean(resection_overlap_winners) / np.mean(resection_overlap_losers)\n",
+        "        # Calculate the winner-loser ratio\n",
+        "        winner_loser_ratio = np.mean(resection_overlap_winners) / np.mean(resection_overlap_losers)\n",
+        "        print(\"Winner Resection Overlap/Loser Resection Overlap =\", winner_loser_ratio)\n",
         "\n",
-        "    return summary_stat_label, N_winners_above_thresh, winner_loser_ratio\n"
+        "        # # Plot resection overlap percentage\n",
+        "        # data = pd.DataFrame({\"Resection overlap\": resection_overlap_winners + resection_overlap_losers,\n",
+        "        #                      \"Player outcome\": list(\"Winner\" for _ in range(len(resection_overlap_winners))) + list(\n",
+        "        #                          \"Loser\" for _ in range(len(resection_overlap_losers)))})\n",
+        "        # ax2 = sns.boxplot(data=data, x='Player outcome', y='Resection overlap', hue='Player outcome')\n",
+        "        # add_stat_annotation(ax2, data=data, x='Player outcome', y='Resection overlap', box_pairs=[(\"Winner\", \"Loser\")],\n",
+        "        #                     test='Mann-Whitney', text_format='star', loc='outside', verbose=2)\n",
+        "        # plt.show()\n",
+        "\n",
+        "        return N_winners_above_thresh, winner_loser_ratio, np.median(resection_overlap_winners), np.mean(resection_overlap_winners),\n",
+        "\n",
+        "    else:\n",
+        "        return N_winners_above_thresh, 0, 0, 0\n"
       ]
     },
     {
@@ -357,6 +390,7 @@
       "outputs": [],
       "source": [
         "# for testing\n",
+        "subs = [2]\n",
         "connectivity_measures = [\"PLI-(0,4)\"]"
       ]
     },
@@ -376,7 +410,7 @@
         "\n",
         "summary_stat_label = [\"average\", \"mm\", \"coefvar\", \"max\", \"random\"]\n",
         "\n",
-        "Subject, Outcome, CM, R, Group_size, Strategy, Sigmas, N_winners, Mean_overlap_ratio = [],[],[],[],[],[],[],[],[]\n",
+        "Subject, Outcome, CM, R, Group_size, Strategy, Sigmas, N_winners, Mean_overlap_ratio, Median_overlap_winners, Mean_overlap_winners = [],[],[],[],[],[],[],[],[],[],[]\n",
         "\n",
         "for sub in subs:\n",
         "\n",
@@ -423,14 +457,14 @@
         "\n",
         "            remap = interp1d([0,1],[1,100]) # remap values from 0 to 1, to 1 to 100\n",
         "            \n",
-        "            game_score = {str(p):[] for p in [hand[0] for hand in hands]}\n",
+        "            game_score = {tuple(p):[] for p in [hand[0] for hand in hands]}\n",
         "\n",
         "            rounds=10\n",
         "            for turn in range (rounds):\n",
         "\n",
         "                for r in range(n_cards):\n",
         "\n",
-        "                    game = [Player(AI=rn_choice, deck=hand[1], name=str(hand[0]), n_in_hand=n_cards) for hand in hands]\n",
+        "                    game = [Player(AI=rn_choice, deck=hand[1], name=tuple(hand[0]), n_in_hand=n_cards) for hand in hands]\n",
         "\n",
         "                    play(*game)\n",
         "\n",
@@ -445,16 +479,24 @@
         "            sorted_players = {k:v for k, v in sorted(game_score.items(), key=lambda item: sum(item[1]), reverse=True)}\n",
         "            dump(sorted_players, open(path_game_scores + f\"scores_{measure}_{summary_stat_label[i]}_{n_cards}cards_{rounds}rounds_preseizure1_sub{sub}.p\", \"wb\"))\n",
         "\n",
+        "            sigmas = [1,2,3,4]\n",
+        "\n",
+        "            for sigma in sigmas:\n",
+        "\n",
+        "                n_winners, winner_loser_ratio, resection_overlap_winners_median, resection_overlap_winners_mean = check_winners(sorted_players, sigma, resection_nodes, group_size)\n",
         "\n",
         "            Subject.append(sub)\n",
         "            Outcome.append(surgical_outcome)\n",
         "            CM.append(measure)\n",
         "            Strategy.append(summary_stat_label[i])\n",
-        "            Sigmas.append(sigmas)\n",
-        "            N_winners.append(x[1])\n",
-        "            Mean_overlap_ratio.append(x[2])\n",
+        "            Sigmas.append(sigma)\n",
         "\n",
-        "surgical_outcome_prediciton_data = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Strategy\":Strategy, \"Sigmas\":Sigmas, \"N_winners\":N_winners, \"Mean_overlap_ratio\":Mean_overlap_ratio})\n",
+        "            N_winners.append(n_winners)\n",
+        "            Mean_overlap_ratio.append(winner_loser_ratio)\n",
+        "            Median_overlap_winners.append(resection_overlap_winners_median)\n",
+        "            Mean_overlap_winners.append(resection_overlap_winners_mean)\n",
+        "\n",
+        "surgical_outcome_prediciton_data = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Strategy\":Strategy, \"Sigmas\":Sigmas, \"N_winners\":N_winners, \"Mean_overlap_ratio\":Mean_overlap_ratio, \"Median_overlap_winners\":Median_overlap_winners, \"Mean_overlap_winners\":Mean_overlap_winners})\n",
         "surgical_outcome_prediciton_data.to_excel(path_game_scores+f\"surgical_outcome_data_{sigmas}sigma.xlsx\")"
       ]
     },
