produced results with

--- a/notebooks/game_vKarla.ipynb
+++ b/notebooks/game_vKarla.ipynb
@@ -389,9 +389,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# for testing\n",
-        "subs = [2]\n",
-        "connectivity_measures = [\"PLI-(0,4)\"]"
+        "# # For testing\n",
+        "# subs = [2]\n",
+        "# connectivity_measures = [\"PLI-(0,4)\"]"
       ]
     },
     {
@@ -479,25 +479,25 @@
         "            sorted_players = {k:v for k, v in sorted(game_score.items(), key=lambda item: sum(item[1]), reverse=True)}\n",
         "            dump(sorted_players, open(path_game_scores + f\"scores_{measure}_{summary_stat_label[i]}_{n_cards}cards_{rounds}rounds_preseizure1_sub{sub}.p\", \"wb\"))\n",
         "\n",
-        "            sigmas = [1,2,3,4]\n",
+        "            sigmas = [1]\n",
         "\n",
         "            for sigma in sigmas:\n",
         "\n",
         "                n_winners, winner_loser_ratio, resection_overlap_winners_median, resection_overlap_winners_mean = check_winners(sorted_players, sigma, resection_nodes, group_size)\n",
         "\n",
-        "            Subject.append(sub)\n",
-        "            Outcome.append(surgical_outcome)\n",
-        "            CM.append(measure)\n",
-        "            Strategy.append(summary_stat_label[i])\n",
-        "            Sigmas.append(sigma)\n",
+        "                Subject.append(sub)\n",
+        "                Outcome.append(surgical_outcome)\n",
+        "                CM.append(measure)\n",
+        "                Strategy.append(summary_stat_label[i])\n",
+        "                Sigmas.append(sigma)\n",
         "\n",
-        "            N_winners.append(n_winners)\n",
-        "            Mean_overlap_ratio.append(winner_loser_ratio)\n",
-        "            Median_overlap_winners.append(resection_overlap_winners_median)\n",
-        "            Mean_overlap_winners.append(resection_overlap_winners_mean)\n",
+        "                N_winners.append(n_winners)\n",
+        "                Mean_overlap_ratio.append(winner_loser_ratio)\n",
+        "                Median_overlap_winners.append(resection_overlap_winners_median)\n",
+        "                Mean_overlap_winners.append(resection_overlap_winners_mean)\n",
         "\n",
-        "surgical_outcome_prediciton_data = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Strategy\":Strategy, \"Sigmas\":Sigmas, \"N_winners\":N_winners, \"Mean_overlap_ratio\":Mean_overlap_ratio, \"Median_overlap_winners\":Median_overlap_winners, \"Mean_overlap_winners\":Mean_overlap_winners})\n",
-        "surgical_outcome_prediciton_data.to_excel(path_game_scores+f\"surgical_outcome_data_{sigmas}sigma.xlsx\")"
+        "    surgical_outcome_prediciton_data = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Strategy\":Strategy, \"Sigmas\":Sigmas, \"N_winners\":N_winners, \"Mean_overlap_ratio\":Mean_overlap_ratio, \"Median_overlap_winners\":Median_overlap_winners, \"Mean_overlap_winners\":Mean_overlap_winners})\n",
+        "    surgical_outcome_prediciton_data.to_excel(path_game_scores+f\"surgical_outcome_data_{sigma}sigma.xlsx\")"
       ]
     },
     {
