--- a/notebooks/game_vKarla_outcome_prediction.ipynb
+++ b/notebooks/game_vKarla_outcome_prediction.ipynb
@@ -77,6 +77,7 @@
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
+    "# !pip install statannot\n",
     "from statannot import add_stat_annotation\n",
     "\n",
     "from scipy.stats import shapiro, mannwhitneyu, ttest_ind\n",
@@ -93,15 +94,15 @@
     "    \n",
     "    summary_stat_label = [\"average\", \"mm\", \"coefvar\", \"max\", \"random\"]\n",
     "\n",
-    "    load_data[\"Mean_overlap\"].fillna(0, inplace=True) # if 0 winners, nan is saved, so replace it with 0\n",
+    "    load_data[\"Mean_overlap_ratio\"].fillna(0, inplace=True) # if 0 winners, nan is saved, so replace it with 0\n",
     "\n",
     "    for cm in conn_measures:\n",
     "\n",
     "        for summary_stat in summary_stat_label:\n",
-    "            data = load_data.groupby(\"CM\").get_group(cm).groupby(\"summary_stat\").get_group(summary_stat)\n",
+    "            data = load_data.groupby(\"CM\").get_group(cm).groupby(\"Strategy\").get_group(summary_stat)\n",
     "            # print(data.dtypes)\n",
     "\n",
-    "            x_plot, y_plot = list(data.Mean_overlap), [\"good\" if val==1 else \"bad\" for val in data[\"Outcome\"]]\n",
+    "            x_plot, y_plot = list(data.Mean_overlap_ratio), [\"good\" if val==1 else \"bad\" for val in data[\"Outcome\"]]\n",
     "\n",
     "            # calculate moving threshold-based AUC\n",
     "            mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.00001)\n",
@@ -117,10 +118,10 @@
     "            if p1 > 0.05 or p0 > 0.05: _, pvalue = mannwhitneyu(group1, group0, alternative='two-sided'); stest = 'Mann-Whitney'; gaussian = True\n",
     "            elif p1 <= 0.05 and p0 <= 0.05: _, pvalue = ttest_ind(group1, group0, equal_var = False); stest = 't-test_welch'\n",
     "\n",
-    "            g = sns.catplot(data=data, x='Outcome', y='Mean_overlap', order=[1,0], kind=\"box\", hue=\"Outcome\",\n",
+    "            g = sns.catplot(data=data, x='Outcome', y='Mean_overlap_ratio', order=[1,0], kind=\"box\", hue=\"Outcome\",\n",
     "                            palette=[\"#FFA7A0\", \"#ABEAC9\"],\n",
     "                            height=4, aspect=.7);\n",
-    "            g.map_dataframe(sns.stripplot, x='Outcome', y='Mean_overlap', order=[1,0], hue=\"Outcome\",\n",
+    "            g.map_dataframe(sns.stripplot, x='Outcome', y='Mean_overlap_ratio', order=[1,0], hue=\"Outcome\",\n",
     "                            palette=[\"#404040\",\"#404040\"],\n",
     "                            alpha=0.6, dodge=True);\n",
     "\n",
