--- a/notebooks/game_vKarla.ipynb
+++ b/notebooks/game_vKarla.ipynb
@@ -435,7 +435,7 @@
         "        for measure in connectivity_measures:\n",
         "            print(f\"Subject: {sub}\")\n",
         "            print(f\"Connectivity measure: {measure}\")\n",
-        "            print(f\"Summary statisctic for connectivity change: {summary_stat_label[i]}\")\n",
+        "            print(f\"Summary statistic for connectivity change: {summary_stat_label[i]}\")\n",
         "\n",
         "            df_sub_cm = df_sub[df_sub['CM'] == measure]\n",
         "\n",
@@ -479,7 +479,7 @@
         "            sorted_players = {k:v for k, v in sorted(game_score.items(), key=lambda item: sum(item[1]), reverse=True)}\n",
         "            dump(sorted_players, open(path_game_scores + f\"scores_{measure}_{summary_stat_label[i]}_{n_cards}cards_{rounds}rounds_preseizure1_sub{sub}.p\", \"wb\"))\n",
         "\n",
-        "            sigmas = [1]\n",
+        "            sigmas = [3]\n",
         "\n",
         "            for sigma in sigmas:\n",
         "\n",
@@ -505,7 +505,59 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "from glob import glob\n",
+        "\n",
+        "path_game_scores = \"/media/kivi/ADATA HV100/epigame-folder/game_vKarla/\"\n",
+        "\n",
+        "scores_files = glob(path_game_scores)\n",
+        "\n",
+        "summary_stat_label = [\"average\", \"mm\", \"coefvar\", \"max\", \"random\"]\n",
+        "\n",
+        "Subject, Outcome, CM, R, Group_size, Strategy, Sigmas, N_winners, Mean_overlap_ratio, Median_overlap_winners, Mean_overlap_winners = [],[],[],[],[],[],[],[],[],[],[]\n",
+        "\n",
+        "for filename in scores_files:\n",
+        "\n",
+        "    # \"scores_{measure}_{summary_stat_label[i]}_{n_cards}cards_{rounds}rounds_preseizure1_sub{sub}.p\"\n",
+        "    params = filename.split(\".\")[0].split(\"_\")\n",
+        "    \n",
+        "    measure = params[1]\n",
+        "    summary_stat_label = params[2]\n",
+        "    n_cards = params[3]\n",
+        "    rounds = params[4]\n",
+        "    sub = params[6]\n",
+        "\n",
+        "    surgical_outcome = 1 if sub in good_outcome_subjects else 0\n",
+        "\n",
+        "    # we need resection_nodes and group_size to check the winners\n",
+        "    all_nodes = NODES[sub]\n",
+        "    resection_nodes = RESECTION[int(sub)]\n",
+        "    r = 0.1\n",
+        "    group_size = int(len(all_nodes)*r)\n",
+        "\n",
+        "    # load sorted_players\n",
+        "    sorted_players = load(open(path_game_scores + filename, \"rb\"))\n",
+        "\n",
+        "    sigmas = [3]\n",
+        "\n",
+        "    for sigma in sigmas:\n",
+        "\n",
+        "        n_winners, winner_loser_ratio, resection_overlap_winners_median, resection_overlap_winners_mean = check_winners(sorted_players, sigma, resection_nodes, group_size)\n",
+        "\n",
+        "        Subject.append(sub)\n",
+        "        Outcome.append(surgical_outcome)\n",
+        "        CM.append(measure)\n",
+        "        Strategy.append(summary_stat_label)\n",
+        "        Sigmas.append(sigma)\n",
+        "\n",
+        "        N_winners.append(n_winners)\n",
+        "        Mean_overlap_ratio.append(winner_loser_ratio)\n",
+        "        Median_overlap_winners.append(resection_overlap_winners_median)\n",
+        "        Mean_overlap_winners.append(resection_overlap_winners_mean)\n",
+        "\n",
+        "surgical_outcome_prediciton_data = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Strategy\":Strategy, \"Sigmas\":Sigmas, \"N_winners\":N_winners, \"Mean_overlap_ratio\":Mean_overlap_ratio, \"Median_overlap_winners\":Median_overlap_winners, \"Mean_overlap_winners\":Mean_overlap_winners})\n",
+        "surgical_outcome_prediciton_data.to_excel(path_game_scores+f\"surgical_outcome_data_{sigma}sigma.xlsx\")"
+      ]
     }
   ],
   "metadata": {
