--- a/notebooks/game_vKarla_outcome_prediction.ipynb
+++ b/notebooks/game_vKarla_outcome_prediction.ipynb
@@ -183,12 +183,12 @@
     "\n",
     "Sigma, CM, Summary_stat, Gauss, Pvalue_Shapiro, Test, Pvalue, MAUC, T, TN, TP = [], [], [], [], [], [], [], [], [], [], []\n",
     "\n",
-    "sigma = 2\n",
+    "sigma = 4\n",
     "while sigma > 0:\n",
     "    load_data = pd.read_excel(main_folder + f\"surgical_outcome_data_{sigma}sigma.xlsx\", engine='openpyxl')\n",
     "\n",
-    "    # Check if x_plot contains any zeros\n",
-    "    zero_row_indices = [i for i, value in enumerate(load_data[\"Mean_overlap_ratio\"].tolist()) if value == 0]\n",
+    "    # Check if \"Mean_overlap_ratio\" contains any zeros\n",
+    "    zero_row_indices = load_data.index[load_data[\"Mean_overlap_ratio\"] == 0].tolist()\n",
     "\n",
     "    if zero_row_indices:\n",
     "        print(f\"Zeros found in rows {zero_row_indices} for sigma={sigma}\")\n",
@@ -198,78 +198,77 @@
     "\n",
     "        sigma -= 1\n",
     "        prev_load_data = pd.read_excel(main_folder + f\"surgical_outcome_data_{sigma}sigma.xlsx\", engine='openpyxl')\n",
-    "        \n",
+    "\n",
     "        for zero_row_index in zero_row_indices:\n",
     "            zero_value = prev_load_data.loc[zero_row_index, \"Mean_overlap_ratio\"]\n",
     "            load_data.loc[zero_row_index, \"Mean_overlap_ratio\"] = zero_value\n",
     "    else:\n",
-    "        sigma -= 1\n",
+    "        break  # No zeros found, exit the loop\n",
     "\n",
-    "    summary_stat_label = [\"average\", \"mm\", \"coefvar\", \"max\", \"random\"]\n",
     "\n",
-    "    load_data[\"Mean_overlap_ratio\"].fillna(0, inplace=True)\n",
+    "summary_stat_label = [\"average\", \"mm\", \"coefvar\", \"max\", \"random\"]\n",
     "\n",
-    "    for cm in conn_measures:\n",
-    "        for summary_stat in summary_stat_label:\n",
-    "            data = load_data.groupby(\"CM\").get_group(cm).groupby(\"Strategy\").get_group(summary_stat)\n",
+    "for cm in conn_measures:\n",
+    "    for summary_stat in summary_stat_label:\n",
+    "        data = load_data.groupby(\"CM\").get_group(cm).groupby(\"Strategy\").get_group(summary_stat)\n",
     "\n",
-    "            x_plot, y_plot = list(data.Mean_overlap_ratio), [\"good\" if val == 1 else \"bad\" for val in data[\"Outcome\"]]\n",
+    "        x_plot, y_plot = list(data.Mean_overlap_ratio), [\"good\" if val == 1 else \"bad\" for val in data[\"Outcome\"]]\n",
     "\n",
-    "            mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.0001)\n",
+    "        mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.0001)\n",
     "\n",
-    "            group1 = [x for i, x in enumerate(x_plot) if y_plot[i] == \"good\"]\n",
-    "            group0 = [x for i, x in enumerate(x_plot) if y_plot[i] == \"bad\"]\n",
+    "        group1 = [x for i, x in enumerate(x_plot) if y_plot[i] == \"good\"]\n",
+    "        group0 = [x for i, x in enumerate(x_plot) if y_plot[i] == \"bad\"]\n",
     "\n",
-    "            gaussian, stest = False, ''\n",
-    "            stat1, p1 = shapiro(group1)\n",
-    "            stat0, p0 = shapiro(group0)\n",
+    "        gaussian, stest = False, ''\n",
+    "        stat1, p1 = shapiro(group1)\n",
+    "        stat0, p0 = shapiro(group0)\n",
     "\n",
-    "            pvalue = 1\n",
-    "            if p1 > 0.05 or p0 > 0.05:\n",
-    "                _, pvalue = mannwhitneyu(group1, group0, alternative='two-sided')\n",
-    "                stest = 'Mann-Whitney'\n",
-    "                gaussian = True\n",
-    "            elif p1 <= 0.05 and p0 <= 0.05:\n",
-    "                _, pvalue = ttest_ind(group1, group0, equal_var=False)\n",
-    "                stest = 't-test_welch'\n",
+    "        pvalue = 1\n",
+    "        if p1 > 0.05 or p0 > 0.05:\n",
+    "            _, pvalue = mannwhitneyu(group1, group0, alternative='two-sided')\n",
+    "            stest = 'Mann-Whitney'\n",
+    "            gaussian = True\n",
+    "        elif p1 <= 0.05 and p0 <= 0.05:\n",
+    "            _, pvalue = ttest_ind(group1, group0, equal_var=False)\n",
+    "            stest = 't-test_welch'\n",
     "\n",
-    "            g = sns.catplot(data=data, x='Outcome', y='Mean_overlap_ratio', order=[1, 0], kind=\"box\", hue=\"Outcome\",\n",
-    "                            palette=[\"#FFA7A0\", \"#ABEAC9\"],\n",
-    "                            height=4, aspect=.7)\n",
-    "            g.map_dataframe(sns.stripplot, x='Outcome', y='Mean_overlap_ratio', order=[1, 0], hue=\"Outcome\",\n",
-    "                            palette=[\"#404040\", \"#404040\"],\n",
-    "                            alpha=0.6, dodge=True)\n",
+    "        g = sns.catplot(data=data, x='Outcome', y='Mean_overlap_ratio', order=[1, 0], kind=\"box\", hue=\"Outcome\",\n",
+    "                        palette=[\"#FFA7A0\", \"#ABEAC9\"],\n",
+    "                        height=4, aspect=.7)\n",
+    "        g.map_dataframe(sns.stripplot, x='Outcome', y='Mean_overlap_ratio', order=[1, 0], hue=\"Outcome\",\n",
+    "                        palette=[\"#404040\", \"#404040\"],\n",
+    "                        alpha=0.6, dodge=True)\n",
     "\n",
-    "            p_annot = add_stat_annotation(g.axes[0][0], data=data, x=x_plot, y=y_plot, order=[\"good\", \"bad\"],\n",
-    "                                          box_pairs=[(\"good\", \"bad\")],\n",
-    "                                          test=stest, text_format='star', loc='outside', verbose=0)\n",
+    "        p_annot = add_stat_annotation(g.axes[0][0], data=data, x=x_plot, y=y_plot, order=[\"good\", \"bad\"],\n",
+    "                                      box_pairs=[(\"good\", \"bad\")],\n",
+    "                                      test=stest, text_format='star', loc='outside', verbose=0)\n",
     "\n",
-    "            pvalue_statannot = p_annot[1][0].__dict__[\"pval\"]\n",
-    "            if pvalue <= 0.05:\n",
-    "                print(\"P-value computed by statannot =\", pvalue_statannot)\n",
-    "                print(stest)\n",
-    "                plt.title(f\"Sigma = {sigma}; Measure = {cm}; summary_stat = {summary_stat}; p-value = {pvalue}; AUC = {mauc[0]}\", pad=50)\n",
-    "                plt.show()\n",
+    "        pvalue_statannot = p_annot[1][0].__dict__[\"pval\"]\n",
+    "        if pvalue <= 0.05:\n",
+    "            print(\"P-value computed by statannot =\", pvalue_statannot)\n",
+    "            print(stest)\n",
+    "            plt.title(f\"Measure = {cm}; summary_stat = {summary_stat}; p-value = {pvalue}; AUC = {mauc[0]}\", pad=50)\n",
+    "            plt.show()\n",
     "\n",
-    "            plt.close('all')\n",
+    "        plt.close('all')\n",
     "\n",
-    "            Sigma.append(sigma)\n",
-    "            CM.append(cm)\n",
-    "            Summary_stat.append(summary_stat)\n",
-    "            Gauss.append(gaussian)\n",
-    "            Pvalue_Shapiro.append((p0, p1))\n",
-    "            Test.append(stest)\n",
-    "            Pvalue.append(pvalue)\n",
-    "            MAUC.append(mauc[0])\n",
-    "            T.append(mauc[1])\n",
-    "            TN.append(mauc[2])\n",
-    "            TP.append(mauc[3])\n",
+    "        Sigma.append(sigma)\n",
+    "        CM.append(cm)\n",
+    "        Summary_stat.append(summary_stat)\n",
+    "        Gauss.append(gaussian)\n",
+    "        Pvalue_Shapiro.append((p0, p1))\n",
+    "        Test.append(stest)\n",
+    "        Pvalue.append(pvalue)\n",
+    "        MAUC.append(mauc[0])\n",
+    "        T.append(mauc[1])\n",
+    "        TN.append(mauc[2])\n",
+    "        TP.append(mauc[3])\n",
     "\n",
     "outcome_pred = pd.DataFrame({\"CM\": CM, \"Summary_stat\": summary_stat, \"Sigma\": Sigma,\n",
-    "                              \"Gauss\": Gauss, \"Pvalue-Shapiro\": Pvalue_Shapiro,\n",
-    "                              \"Test\": Test, \"Pvalue\": Pvalue,\n",
-    "                              \"MAUC\": MAUC, \"T\": T, \"TN\": TN, \"TP\": TP})\n",
-    "outcome_pred.to_excel(main_folder + f\"surgical_outcome_prediction_game_vKarla.xlsx\")\n",
+    "                          \"Gauss\": Gauss, \"Pvalue-Shapiro\": Pvalue_Shapiro,\n",
+    "                          \"Test\": Test, \"Pvalue\": Pvalue,\n",
+    "                          \"MAUC\": MAUC, \"T\": T, \"TN\": TN, \"TP\": TP})\n",
+    "outcome_pred.to_excel(main_folder + f\"surgical_outcome_prediction_game_vKarla_sigma_recursive.xlsx\")\n",
     "pass;"
    ]
   }
