--- a/notebooks/game_vKarla_outcome_prediction.ipynb
+++ b/notebooks/game_vKarla_outcome_prediction.ipynb
@@ -177,12 +177,19 @@
     "import seaborn as sns\n",
     "from statannot import add_stat_annotation\n",
     "from scipy.stats import shapiro, mannwhitneyu, ttest_ind\n",
+    "from itertools import combinations\n",
+    "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"last_expr\"\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "Sigma, CM, Summary_stat, Gauss, Pvalue_Shapiro, Test, Pvalue, MAUC, T, TN, TP = [], [], [], [], [], [], [], [], [], [], []\n",
-    "\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sigma = 4\n",
     "while sigma > 0:\n",
     "    load_data = pd.read_excel(main_folder + f\"surgical_outcome_data_{sigma}sigma.xlsx\", engine='openpyxl')\n",
@@ -204,7 +211,16 @@
     "            load_data.loc[zero_row_index, \"Mean_overlap_ratio\"] = zero_value\n",
     "    else:\n",
     "        break  # No zeros found, exit the loop\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CM, Summary_stat, Gauss, Pvalue_Shapiro, Test, Pvalue, MAUC, T, TN, TP = [], [], [], [], [], [], [], [], [], []\n",
     "\n",
     "summary_stat_label = [\"average\", \"mm\", \"coefvar\", \"max\", \"random\"]\n",
     "\n",
@@ -264,11 +280,186 @@
     "        TN.append(mauc[2])\n",
     "        TP.append(mauc[3])\n",
     "\n",
-    "outcome_pred = pd.DataFrame({\"CM\": CM, \"Summary_stat\": summary_stat, \"Sigma\": Sigma,\n",
+    "outcome_pred = pd.DataFrame({\"CM\": CM, \"Summary_stat\": summary_stat,\n",
     "                          \"Gauss\": Gauss, \"Pvalue-Shapiro\": Pvalue_Shapiro,\n",
     "                          \"Test\": Test, \"Pvalue\": Pvalue,\n",
     "                          \"MAUC\": MAUC, \"T\": T, \"TN\": TN, \"TP\": TP})\n",
     "outcome_pred.to_excel(main_folder + f\"surgical_outcome_prediction_game_vKarla_sigma_recursive.xlsx\")\n",
+    "pass;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Combinations of 2 connectivity measures."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CM, Summary_stat, Gauss, Pvalue_Shapiro, Test, Pvalue, MAUC, T, TN, TP = [], [], [], [], [], [], [], [], [], []\n",
+    "\n",
+    "summary_stat_label = [\"average\", \"mm\", \"coefvar\", \"max\", \"random\"]\n",
+    "\n",
+    "for cm in combinations(conn_measures, 2): # combinations of scores based on different connectivity measures\n",
+    "    cm1,cm2 = cm[0],cm[1]\n",
+    "    # print(cm1,cm2)\n",
+    "\n",
+    "    for summary_stat in summary_stat_label:\n",
+    "\n",
+    "        data1 = load_data.groupby(\"CM\").get_group(cm1).groupby(\"Strategy\").get_group(summary_stat)\n",
+    "        data2 = load_data.groupby(\"CM\").get_group(cm2).groupby(\"Strategy\").get_group(summary_stat)\n",
+    "\n",
+    "        # the combination is made as a mean value between two scores\n",
+    "        x_plot = [np.mean([val, list(data2.Mean_overlap)[i]]) for i,val in enumerate(data1.Mean_overlap)]\n",
+    "        y_plot = [\"good\" if val==1 else \"bad\" for val in data1[\"Outcome\"]]\n",
+    "        \n",
+    "        data = pd.DataFrame({\"Mean_overlap\":x_plot,\n",
+    "                                \"Outcome\":y_plot})\n",
+    "\n",
+    "        # calculate moving threshold-based AUC\n",
+    "        mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.0001)\n",
+    "\n",
+    "        group1 = [x for i,x in enumerate(x_plot) if y_plot[i]==\"good\"]\n",
+    "        group0 = [x for i,x in enumerate(x_plot) if y_plot[i]==\"bad\"]\n",
+    "\n",
+    "        gaussian, stest = False, ''\n",
+    "        stat1, p1 = shapiro(group1)\n",
+    "        stat0, p0 = shapiro(group0)\n",
+    "\n",
+    "        pvalue = 1\n",
+    "        if p1 > 0.05 or p0 > 0.05: _, pvalue = mannwhitneyu(group1, group0, alternative='two-sided'); stest = 'Mann-Whitney'; gaussian = True\n",
+    "        elif p1 <= 0.05 and p0 <= 0.05: _, pvalue = ttest_ind(group1, group0, equal_var = False); stest = 't-test_welch'\n",
+    "\n",
+    "        g = sns.catplot(data=data, x='Outcome', y='Mean_overlap', order=[\"good\",\"bad\"], kind=\"box\", hue=\"Outcome\",\n",
+    "                        palette=[\"#ABEAC9\", \"#FFA7A0\"],\n",
+    "                        height=4, aspect=.7);\n",
+    "        g.map_dataframe(sns.stripplot, x='Outcome', y='Mean_overlap', order=[\"good\",\"bad\"], hue=\"Outcome\",\n",
+    "                        palette=[\"#404040\",\"#404040\"],\n",
+    "                        alpha=0.6, dodge=True);\n",
+    "\n",
+    "        p_annot = add_stat_annotation(g.axes[0][0], data=data, x=x_plot, y=y_plot, order=[\"good\",\"bad\"],\n",
+    "                        box_pairs=[(\"good\",\"bad\")],\n",
+    "                        test=stest, text_format='star', loc='outside', verbose=0);\n",
+    "\n",
+    "        pvalue_statannot = p_annot[1][0].__dict__[\"pval\"]\n",
+    "        if pvalue<=0.05:\n",
+    "            print(\"P-value computed by statannot =\", pvalue_statannot)\n",
+    "            print(stest)\n",
+    "            plt.title(f\"Measures = {(cm1, cm2)}; p-value = {pvalue:.4f}; AUC = {mauc[0]:.2f}\", pad=50)\n",
+    "            plt.show()\n",
+    "\n",
+    "        plt.close('all')\n",
+    "\n",
+    "        CM.append((cm1,cm2))\n",
+    "        Summary_stat.append(summary_stat)\n",
+    "        Gauss.append(gaussian)\n",
+    "        Pvalue_Shapiro.append((p0, p1))\n",
+    "        Test.append(stest)\n",
+    "        Pvalue.append(pvalue)\n",
+    "        MAUC.append(mauc[0])\n",
+    "        T.append(mauc[1])\n",
+    "        TN.append(mauc[2])\n",
+    "        TP.append(mauc[3])\n",
+    "\n",
+    "outcome_pred = pd.DataFrame({\"CM\": CM, \"Summary_stat\": summary_stat,\n",
+    "                          \"Gauss\": Gauss, \"Pvalue-Shapiro\": Pvalue_Shapiro,\n",
+    "                          \"Test\": Test, \"Pvalue\": Pvalue,\n",
+    "                          \"MAUC\": MAUC, \"T\": T, \"TN\": TN, \"TP\": TP})\n",
+    "\n",
+    "outcome_pred.to_excel(f\"surgical_outcome_prediction_game_vKarla_sigma_recursive_comb2.xlsx\")\n",
+    "pass;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Combinations of 3 connectivity measures."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CM, Summary_stat, Gauss, Pvalue_Shapiro, Test, Pvalue, MAUC, T, TN, TP = [], [], [], [], [], [], [], [], [], []\n",
+    "\n",
+    "summary_stat_label = [\"average\", \"mm\", \"coefvar\", \"max\", \"random\"]\n",
+    "\n",
+    "for cm in combinations(conn_measures, 3): # combinations of scores based on different connectivity measures\n",
+    "    cm1,cm2,cm3 = cm[0],cm[1],cm[2]\n",
+    "    # print(cm1,cm2,cm3)\n",
+    "\n",
+    "    for summary_stat in summary_stat_label:\n",
+    "\n",
+    "        data1 = load_data.groupby(\"CM\").get_group(cm1).groupby(\"Strategy\").get_group(summary_stat)\n",
+    "        data2 = load_data.groupby(\"CM\").get_group(cm2).groupby(\"Strategy\").get_group(summary_stat)\n",
+    "        data3 = load_data.groupby(\"CM\").get_group(cm3).groupby(\"Strategy\").get_group(summary_stat)\n",
+    "\n",
+    "        # the combination is made as a mean value between two scores\n",
+    "        x_plot = [np.mean([val, list(data2.Mean_overlap)[i], list(data3.Mean_overlap)[i]]) for i,val in enumerate(data1.Mean_overlap)]\n",
+    "        y_plot = [\"good\" if val==1 else \"bad\" for val in data1[\"Outcome\"]]\n",
+    "        \n",
+    "        data = pd.DataFrame({\"Mean_overlap\":x_plot,\n",
+    "                                \"Outcome\":y_plot})\n",
+    "\n",
+    "        # calculate moving threshold-based AUC\n",
+    "        mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.0001)\n",
+    "\n",
+    "        group1 = [x for i,x in enumerate(x_plot) if y_plot[i]==\"good\"]\n",
+    "        group0 = [x for i,x in enumerate(x_plot) if y_plot[i]==\"bad\"]\n",
+    "\n",
+    "        gaussian, stest = False, ''\n",
+    "        stat1, p1 = shapiro(group1)\n",
+    "        stat0, p0 = shapiro(group0)\n",
+    "\n",
+    "        pvalue = 1\n",
+    "        if p1 > 0.05 or p0 > 0.05: _, pvalue = mannwhitneyu(group1, group0, alternative='two-sided'); stest = 'Mann-Whitney'; gaussian = True\n",
+    "        elif p1 <= 0.05 and p0 <= 0.05: _, pvalue = ttest_ind(group1, group0, equal_var = False); stest = 't-test_welch'\n",
+    "\n",
+    "        g = sns.catplot(data=data, x='Outcome', y='Mean_overlap', order=[\"good\",\"bad\"], kind=\"box\", hue=\"Outcome\",\n",
+    "                        palette=[\"#ABEAC9\", \"#FFA7A0\"],\n",
+    "                        height=4, aspect=.7);\n",
+    "        g.map_dataframe(sns.stripplot, x='Outcome', y='Mean_overlap', order=[\"good\",\"bad\"], hue=\"Outcome\",\n",
+    "                        palette=[\"#404040\",\"#404040\"],\n",
+    "                        alpha=0.6, dodge=True);\n",
+    "\n",
+    "        p_annot = add_stat_annotation(g.axes[0][0], data=data, x=x_plot, y=y_plot, order=[\"good\",\"bad\"],\n",
+    "                        box_pairs=[(\"good\",\"bad\")],\n",
+    "                        test=stest, text_format='star', loc='outside', verbose=0);\n",
+    "\n",
+    "        pvalue_statannot = p_annot[1][0].__dict__[\"pval\"]\n",
+    "        if pvalue<=0.05:\n",
+    "            print(\"P-value computed by statannot =\", pvalue_statannot)\n",
+    "            print(stest)\n",
+    "            plt.title(f\"Measures = {(cm1, cm2)}; p-value = {pvalue:.4f}; AUC = {mauc[0]:.2f}\", pad=50)\n",
+    "            plt.show()\n",
+    "\n",
+    "        plt.close('all')\n",
+    "\n",
+    "        CM.append((cm1,cm2,cm3))\n",
+    "        Summary_stat.append(summary_stat)\n",
+    "        Gauss.append(gaussian)\n",
+    "        Pvalue_Shapiro.append((p0, p1))\n",
+    "        Test.append(stest)\n",
+    "        Pvalue.append(pvalue)\n",
+    "        MAUC.append(mauc[0])\n",
+    "        T.append(mauc[1])\n",
+    "        TN.append(mauc[2])\n",
+    "        TP.append(mauc[3])\n",
+    "\n",
+    "outcome_pred = pd.DataFrame({\"CM\": CM, \"Summary_stat\": summary_stat,\n",
+    "                          \"Gauss\": Gauss, \"Pvalue-Shapiro\": Pvalue_Shapiro,\n",
+    "                          \"Test\": Test, \"Pvalue\": Pvalue,\n",
+    "                          \"MAUC\": MAUC, \"T\": T, \"TN\": TN, \"TP\": TP})\n",
+    "\n",
+    "outcome_pred.to_excel(f\"surgical_outcome_prediction_game_vKarla_sigma_recursive_comb3.xlsx\")\n",
     "pass;"
    ]
   }
