--- a/notebooks/cm_animation.ipynb
+++ b/notebooks/cm_animation.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -354,6 +354,8 @@
     "    matrix = connectivity_matrices[frame]\n",
     "    cax = ax.matshow(matrix, cmap='viridis')  # Display the connectivity matrix\n",
     "    plt.title(f'Epoch: {frame + 1}')\n",
+    "    # plt.xticks(list(range(len(nodes))), [f\"R{x}\" for x in range(len(resection))]+[f\"N{y}\" for y in range((len(nodes)-len(resection)))], rotation=90)\n",
+    "    # plt.yticks(list(range(len(nodes))), [f\"R{x}\" for x in range(len(resection))]+[f\"N{y}\" for y in range((len(nodes)-len(resection)))])\n",
     "\n",
     "# Create the animation and assign it to a variable\n",
     "animation = FuncAnimation(fig, update, frames=len(connectivity_matrices), interval=1000)\n",
