--- a/notebooks/game_vKarla_outcome_prediction.ipynb
+++ b/notebooks/game_vKarla_outcome_prediction.ipynb
@@ -315,10 +315,10 @@
     "        data2 = load_data.groupby(\"CM\").get_group(cm2).groupby(\"Strategy\").get_group(summary_stat)\n",
     "\n",
     "        # the combination is made as a mean value between two scores\n",
-    "        x_plot = [np.mean([val, list(data2.Mean_overlap)[i]]) for i,val in enumerate(data1.Mean_overlap)]\n",
+    "        x_plot = [np.mean([val, list(data2.Mean_overlap_ratio)[i]]) for i,val in enumerate(data1.Mean_overlap_ratio)]\n",
     "        y_plot = [\"good\" if val==1 else \"bad\" for val in data1[\"Outcome\"]]\n",
     "        \n",
-    "        data = pd.DataFrame({\"Mean_overlap\":x_plot,\n",
+    "        data = pd.DataFrame({\"Mean_overlap_ratio\":x_plot,\n",
     "                                \"Outcome\":y_plot})\n",
     "\n",
     "        # calculate moving threshold-based AUC\n",
@@ -335,10 +335,10 @@
     "        if p1 > 0.05 or p0 > 0.05: _, pvalue = mannwhitneyu(group1, group0, alternative='two-sided'); stest = 'Mann-Whitney'; gaussian = True\n",
     "        elif p1 <= 0.05 and p0 <= 0.05: _, pvalue = ttest_ind(group1, group0, equal_var = False); stest = 't-test_welch'\n",
     "\n",
-    "        g = sns.catplot(data=data, x='Outcome', y='Mean_overlap', order=[\"good\",\"bad\"], kind=\"box\", hue=\"Outcome\",\n",
+    "        g = sns.catplot(data=data, x='Outcome', y='Mean_overlap_ratio', order=[\"good\",\"bad\"], kind=\"box\", hue=\"Outcome\",\n",
     "                        palette=[\"#ABEAC9\", \"#FFA7A0\"],\n",
     "                        height=4, aspect=.7);\n",
-    "        g.map_dataframe(sns.stripplot, x='Outcome', y='Mean_overlap', order=[\"good\",\"bad\"], hue=\"Outcome\",\n",
+    "        g.map_dataframe(sns.stripplot, x='Outcome', y='Mean_overlap_ratio', order=[\"good\",\"bad\"], hue=\"Outcome\",\n",
     "                        palette=[\"#404040\",\"#404040\"],\n",
     "                        alpha=0.6, dodge=True);\n",
     "\n",
@@ -350,6 +350,7 @@
     "        if pvalue<=0.05:\n",
     "            print(\"P-value computed by statannot =\", pvalue_statannot)\n",
     "            print(stest)\n",
+    "            print(summary_stat)\n",
     "            plt.title(f\"Measures = {(cm1, cm2)}; p-value = {pvalue:.4f}; AUC = {mauc[0]:.2f}\", pad=50)\n",
     "            plt.show()\n",
     "\n",
@@ -403,10 +404,10 @@
     "        data3 = load_data.groupby(\"CM\").get_group(cm3).groupby(\"Strategy\").get_group(summary_stat)\n",
     "\n",
     "        # the combination is made as a mean value between two scores\n",
-    "        x_plot = [np.mean([val, list(data2.Mean_overlap)[i], list(data3.Mean_overlap)[i]]) for i,val in enumerate(data1.Mean_overlap)]\n",
+    "        x_plot = [np.mean([val, list(data2.Mean_overlap_ratio)[i], list(data3.Mean_overlap_ratio)[i]]) for i,val in enumerate(data1.Mean_overlap_ratio)]\n",
     "        y_plot = [\"good\" if val==1 else \"bad\" for val in data1[\"Outcome\"]]\n",
     "        \n",
-    "        data = pd.DataFrame({\"Mean_overlap\":x_plot,\n",
+    "        data = pd.DataFrame({\"Mean_overlap_ratio\":x_plot,\n",
     "                                \"Outcome\":y_plot})\n",
     "\n",
     "        # calculate moving threshold-based AUC\n",
@@ -423,10 +424,10 @@
     "        if p1 > 0.05 or p0 > 0.05: _, pvalue = mannwhitneyu(group1, group0, alternative='two-sided'); stest = 'Mann-Whitney'; gaussian = True\n",
     "        elif p1 <= 0.05 and p0 <= 0.05: _, pvalue = ttest_ind(group1, group0, equal_var = False); stest = 't-test_welch'\n",
     "\n",
-    "        g = sns.catplot(data=data, x='Outcome', y='Mean_overlap', order=[\"good\",\"bad\"], kind=\"box\", hue=\"Outcome\",\n",
+    "        g = sns.catplot(data=data, x='Outcome', y='Mean_overlap_ratio', order=[\"good\",\"bad\"], kind=\"box\", hue=\"Outcome\",\n",
     "                        palette=[\"#ABEAC9\", \"#FFA7A0\"],\n",
     "                        height=4, aspect=.7);\n",
-    "        g.map_dataframe(sns.stripplot, x='Outcome', y='Mean_overlap', order=[\"good\",\"bad\"], hue=\"Outcome\",\n",
+    "        g.map_dataframe(sns.stripplot, x='Outcome', y='Mean_overlap_ratio', order=[\"good\",\"bad\"], hue=\"Outcome\",\n",
     "                        palette=[\"#404040\",\"#404040\"],\n",
     "                        alpha=0.6, dodge=True);\n",
     "\n",
@@ -438,6 +439,7 @@
     "        if pvalue<=0.05:\n",
     "            print(\"P-value computed by statannot =\", pvalue_statannot)\n",
     "            print(stest)\n",
+    "            print(summary_stat)\n",
     "            plt.title(f\"Measures = {(cm1, cm2)}; p-value = {pvalue:.4f}; AUC = {mauc[0]:.2f}\", pad=50)\n",
     "            plt.show()\n",
     "\n",
