--- a/notebooks/game_vKarla.ipynb
+++ b/notebooks/game_vKarla.ipynb
@@ -507,10 +507,11 @@
       "outputs": [],
       "source": [
         "from glob import glob\n",
+        "import re\n",
         "\n",
         "path_game_scores = \"/media/kivi/ADATA HV100/epigame-folder/game_vKarla/\"\n",
         "\n",
-        "scores_files = glob(path_game_scores)\n",
+        "scores_files = glob(path_game_scores + \"*.p\")\n",
         "\n",
         "summary_stat_label = [\"average\", \"mm\", \"coefvar\", \"max\", \"random\"]\n",
         "\n",
@@ -519,13 +520,13 @@
         "for filename in scores_files:\n",
         "\n",
         "    # \"scores_{measure}_{summary_stat_label[i]}_{n_cards}cards_{rounds}rounds_preseizure1_sub{sub}.p\"\n",
-        "    params = filename.split(\".\")[0].split(\"_\")\n",
+        "    params = filename.split(\"/\")[-1].split(\".\")[0].split(\"_\")\n",
         "    \n",
         "    measure = params[1]\n",
         "    summary_stat_label = params[2]\n",
-        "    n_cards = params[3]\n",
-        "    rounds = params[4]\n",
-        "    sub = params[6]\n",
+        "    n_cards = re.sub(r'[^0-9]', '', params[3])\n",
+        "    rounds = re.sub(r'[^0-9]', '', params[4])\n",
+        "    sub = re.sub(r'[^0-9]', '', params[6])\n",
         "\n",
         "    surgical_outcome = 1 if sub in good_outcome_subjects else 0\n",
         "\n",
@@ -536,7 +537,7 @@
         "    group_size = int(len(all_nodes)*r)\n",
         "\n",
         "    # load sorted_players\n",
-        "    sorted_players = load(open(path_game_scores + filename, \"rb\"))\n",
+        "    sorted_players = load(open(filename, \"rb\"))\n",
         "\n",
         "    sigmas = [3]\n",
         "\n",
@@ -558,6 +559,13 @@
         "surgical_outcome_prediciton_data = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Strategy\":Strategy, \"Sigmas\":Sigmas, \"N_winners\":N_winners, \"Mean_overlap_ratio\":Mean_overlap_ratio, \"Median_overlap_winners\":Median_overlap_winners, \"Mean_overlap_winners\":Mean_overlap_winners})\n",
         "surgical_outcome_prediciton_data.to_excel(path_game_scores+f\"surgical_outcome_data_{sigma}sigma.xlsx\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
