--- a/notebooks/game_vKarla.ipynb
+++ b/notebooks/game_vKarla.ipynb
@@ -427,8 +427,9 @@
         "    r = 0.1\n",
         "    group_size = int(len(all_nodes)*r)\n",
         "    # print(\"Random group size =\", group_size)\n",
-        "\n",
-        "    players = [sorted(list(np.random.choice(all_nodes, size=group_size, replace=False))) for i in range(len(all_nodes)*5)]\n",
+        "    \n",
+        "    # Define players as random groups of nodes\n",
+        "    players = [sorted(list(np.random.choice(all_nodes, size=group_size, replace=False))) for i in range(len(all_nodes)*5)] \n",
         "\n",
         "    for i,summary_stat in enumerate([deck_average, deck_mm, deck_coef_of_variation, deck_max, deck_random]):\n",
         "\n",
@@ -498,6 +499,13 @@
         "\n",
         "    surgical_outcome_prediciton_data = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Strategy\":Strategy, \"Sigmas\":Sigmas, \"N_winners\":N_winners, \"Mean_overlap_ratio\":Mean_overlap_ratio, \"Median_overlap_winners\":Median_overlap_winners, \"Mean_overlap_winners\":Mean_overlap_winners})\n",
         "    surgical_outcome_prediciton_data.to_excel(path_game_scores+f\"surgical_outcome_data_{sigma}sigma.xlsx\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "With game scores files ready, compute the surgical outcome data for a threshold of choice (sigma)."
       ]
     },
     {
